sync & porting `inventory` module